# Lua-Manager-QT6

./: .gitignore  CMakeLists.txt  README.md  build_luajit.bat  clean_luajit.bat  widget.cpp  widget.ui
LuaJIT-2.1/src/: msvcbuild.bat
lua/: FFI.lua
sol/: sol.hpp
